--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.30.0",
+    "tooltip": "^1.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
